edit some text in research, fix spacing of about image

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -174,6 +174,10 @@ body:hover .visually-hidden button {
     width: 35%
 }
 
+.top-pad {
+  padding-top: 25px;
+}
+
 /*
    Icons
    ========================================================================== */
